# graph-bank

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-Customer  Dockerfile-Deposit  docker-compose.yml  readme.md  router-config-dev.yaml  supergraph.yaml
docker-adds/grafana/dashboards/: GRAPH_BANK.json
docker-adds/grafana/provisioning/datasources/: loki.yml  tempo.yaml
docker-adds/prometheus/: prometheus.yml
docker-adds/tempo/: tempo-config.yaml
graph-customer/: Cargo.toml
graph-customer/config/: docker.toml  local.toml
graph-customer/src/: main.rs
graph-customer/src/config/: graph_config.rs  mod.rs  settings.rs
graph-customer/src/domain/: customer.rs
graph-customer/src/receiver/: customer_receiver.rs  mod.rs
graph-deposit/: Cargo.toml
graph-deposit/config/: docker.toml  local.toml
graph-deposit/src/: main.rs
graph-deposit/src/config/: graph_config.rs  mod.rs  settings.rs
graph-deposit/src/domain/: deposit.rs
graph-deposit/src/receiver/: deposit_receiver.rs  mod.rs
http/: customer-query.http  deposit-query.http  super-graph-query.http
tools-server/: Cargo.toml
tools-server/src/: health.rs  lib.rs  metrics.rs  observability.rs  routes.rs  tempo_tracing.rs  trace_span_layer.rs  tracing.rs
