[package]
name = "graph-customer"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { workspace = true }
axum-tracing-opentelemetry = { workspace = true }
async-graphql = { workspace = true, default-features = false, features = ["tracing", "opentelemetry", "graphiql", "playground"] }
async-graphql-axum = { workspace = true, default-features = false }
config = { workspace = true }

opentelemetry = { workspace = true }
tracing = { workspace = true }
tracing-loki  = { workspace = true }

tokio = { workspace = true }

serde = { workspace = true }
serde_derive = { workspace = true }
tools-server = { path = "../tools-server" }